Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59433

Qt5 no longer shows window list in macOS dock

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.3.0 Alpha
    • 5.8.0, 5.12, 6.2
    • QPA
    • None
    • All versions of macOS up to Sierra are affected.
    • macOS
    • 3fcdb6cb6e35a37f9b511ec2705336102c194d6b (qt/qtbase/dev)

      A Qt4 application showed the list of windows it had in the macOS dock, a Qt5 application does not, unlike native macOS applications. I've tested this with a variety of Qt5-based applications on macOS and all exhibit the same bug.

      To begin with, here is how it properly looked like in Qt4: https://i.stack.imgur.com/l7jCp.png. The application has two windows and both are listed in the dock along with a little icon signifying that it's a window. Here is how it looks like in Qt5: https://i.stack.imgur.com/EI0RV.png the application window list is missing.

      I have tested several open-source, Qt5 applications for this behaviour and as far as I can see all of them are affected by this bug.

      Tiled on macOS, no window list: https://i.imgur.com/JHzRpmK.png
      Tiled on Ubuntu, window list present: https://i.imgur.com/6OMg4f3.png

      PacketSenter on macOS, no window list: https://i.imgur.com/cPATKIR.png
      PacketSender on Ubuntu, window list present: https://i.imgur.com/Aw636gJ.png

      git-cola also exhibits this behaviour.

      Unless proven otherwise, I believe all Qt5 applications on macOS have this bug.

        1. mudlet-qt4.png
          115 kB
          Thorbjørn Lindeijer
        2. mudlet-qt5.8.png
          81 kB
          Thorbjørn Lindeijer
        3. tiled-qt5.9.7.png
          487 kB
          Thorbjørn Lindeijer
        For Gerrit Dashboard: QTBUG-59433
        # Subject Branch Project Status CR V

            tpochep Timur Pocheptsov
            vadi Vadim Peretokin
            Votes:
            3 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes