src/plugins/platforms/cocoa/qcocoamenubar.h
@@ -67,6 +67,7 @@ public:
     NSMenu *nsMenu() const override { return m_nativeMenu; }
 
     static void updateMenuBarImmediately();
+    static void insertWindowMenu();
 
     QList<QCocoaMenuItem*> merged() const;
     NSMenuItem *itemForRole(QPlatformMenuItem::MenuRole role);
